[package]
name = "parade"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "PG awesomeness"
readme = "README.md"
homepage = "https://github.com/irfius/parade.git"
repository = "https://github.com/irfius/parade.git"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
